# asystem-astate

./: CMakeLists.txt  Makefile  README.md
cmake/: dependencies.cmake
dockerfiles/: astate.dockerfile
python/example/: README.md  infer.py  no_discovery_setup_infer_env.sh  no_discovery_setup_trainer_env.sh  setup_infer_env.sh  setup_trainer_env.sh  train.py  verify_md5.py
scripts/: install_deps.sh
src/common/: rdma_type.h
src/transfer/: CMakeLists.txt  types.h
src/transport/: CMakeLists.txt  rdma_transporter.cpp  rdma_transporter.h
utrans_pkg/: libutrans-0.0.4-7.x86_64.rpm  libutrans_0.0.4-8_amd64.deb
